examples/SmallPython/files/bad/b10.py
def foo():
  def bar():
     1
        2
   def zoo():
    1